<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <LinearLayout
                android:id="@+id/homepageTaskLayout"
                style="@style/custom_background"
                android:layout_width="@dimen/home_btn_width"
                android:layout_height="fill_parent"
                android:orientation="vertical">

            <ImageButton
                    android:id="@+id/ibHome"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/home_btn_height"
                    android:background="@drawable/uniform_blue_button"
                    android:scaleType="center"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:src="@drawable/home"/>

            <ExpandableListView
                    android:id="@+id/taskListView"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scrollbars="none"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btnClearTask"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/uniform_blue_button"
                        android:text="@string/clearTasks"
                        android:textColor="@color/white"
                        android:textSize="32sp"/>

                <Button
                        android:id="@+id/btnRefreshTask"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/uniform_blue_button"
                        android:text="@string/refreshTasks"
                        android:textColor="@color/white"
                        android:textSize="32sp"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
                android:id="@+id/mainFragment"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

        <LinearLayout
                android:id="@+id/homepageOperatorLayout"
                android:layout_width="@dimen/operating_btn_width"
                android:layout_height="fill_parent"
                android:orientation="vertical">

            <ToggleButton
                    android:id="@+id/tbExecute"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/selector_tb_execute"
                    android:ems="1"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.75"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textOff="@string/ebtnExecute"
                    android:textOn="@string/ebtnPause"
                    android:textSize="72sp"
                    android:textStyle="bold"/>

            <ToggleButton
                    android:id="@+id/tbWash"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_tb_wash"
                    android:ems="1"
                    android:lineSpacingMultiplier="1.25"
                    android:textColor="@color/white"
                    android:textOff="@string/btnWashSelect"
                    android:textOn="@string/btnWashCancel"
                    android:textSize="64sp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- 左滑弹出的菜单-->
    <LinearLayout android:layout_width="@dimen/mainActivity_drawerLayout_width"
                  android:orientation="vertical"
                  android:layout_gravity="start"
                  android:layout_height="match_parent"
                  android:background="@drawable/white">
        <com.feng.CustomView.IconButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iconBtnRobot"
                android:drawableLeft="@mipmap/map_path_arrow2"
                android:text="@string/robotDefaultName"/>
        <ScrollView android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scrollbars="none">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <com.feng.CustomView.IconButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/iconBtnBack"
                        android:drawableLeft="@mipmap/btn_back"
                        android:text="@string/back"/>
                <com.feng.CustomView.IconButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/iconBtnUsb"
                        android:drawableLeft="@mipmap/drawer_menu_usb_disconnect"
                        android:text="@string/usbDisconnect"/>
                <com.feng.CustomView.IconButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/iconBtnSchedule"
                        android:drawableLeft="@mipmap/drawer_menu_schedule_disconnect"
                        android:text="@string/ScheduleDisconnect"/>
                <com.feng.CustomView.IconButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/iconBtnPower"
                        android:drawableLeft="@mipmap/drawer_menu_power20"
                        android:text="@string/powerUnknown"/>
                <com.feng.CustomView.IconButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/iconBtnWarning"
                        android:drawableLeft="@mipmap/drawer_menu_warn"/>
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <com.feng.CustomView.IconButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSetting"
                    android:drawableLeft="@mipmap/btn_setting"
                    android:text="@string/setting"/>
            <com.feng.CustomView.IconButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnQuit"
                    android:drawableLeft="@mipmap/drawer_menu_quit"
                    android:text="@string/quit"/>
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>