<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="@dimen/menu_title_height"
              android:background="@color/rcs_g"
              android:orientation="horizontal">

    <Button
            android:id="@+id/btnUniformTitleLeft"
            android:gravity="center"
            android:background="@drawable/uniform_blue_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="26sp"/>

    <TextView
            android:id="@+id/tvUniformTitleCenter"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="30sp"/>

    <Button
            android:id="@+id/btnUniformTitleRight"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.05"
            android:text="@string/menu_edit_quit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/uniform_blue_button"
            android:textSize="26sp"/>
</LinearLayout>
